change swagger and postman collection
